--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="content-con">
                 <h3>Spocial Discount</h3>
                 <h1>Latest Audio System</h1>
-                <h2>offer 20% off</h2>
+                <h2>offer 20% off555</h2>
                 <div class="btn-hero">
                     <button>Seemore</button>
                 </div>
