--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                     </ul>
                 </div>
                 <div class="menu-icon">
-                    <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-                    <a href="#"><i class="fa-solid fa-user"></i></a>
-                    <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <ul>
+                        <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                        <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
+                        <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -135,7 +137,8 @@
         <div class="product-con">
             <div class="product-item">
                 <div class="product-img">
-                    <img src="https://plus.unsplash.com/premium_photo-1679513691474-73102089c117?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="https://plus.unsplash.com/premium_photo-1679513691474-73102089c117?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
                 </div>
                 <div class="product-detail">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -146,7 +149,8 @@
             </div>
             <div class="product-item">
                 <div class="product-img">
-                    <img src="https://plus.unsplash.com/premium_photo-1679513691641-9aedddc94f96?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="https://plus.unsplash.com/premium_photo-1679513691641-9aedddc94f96?q=80&w=2013&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
                 </div>
                 <div class="product-detail">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -157,7 +161,8 @@
             </div>
             <div class="product-item">
                 <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
                 </div>
                 <div class="product-detail">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -168,7 +173,8 @@
             </div>
             <div class="product-item">
                 <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1487215078519-e21cc028cb29?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="https://images.unsplash.com/photo-1487215078519-e21cc028cb29?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
                 </div>
                 <div class="product-detail">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -179,7 +185,8 @@
             </div>
             <div class="product-item">
                 <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1495305379050-64540d6ee95d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="https://images.unsplash.com/photo-1495305379050-64540d6ee95d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
                 </div>
                 <div class="product-detail">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -190,7 +197,8 @@
             </div>
             <div class="product-item">
                 <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1483032711911-cfd45aabc9a0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="https://images.unsplash.com/photo-1483032711911-cfd45aabc9a0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
                 </div>
                 <div class="product-detail">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -201,7 +209,8 @@
             </div>
             <div class="product-item">
                 <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1481207801830-97f0f9a1337e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="https://images.unsplash.com/photo-1481207801830-97f0f9a1337e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
                 </div>
                 <div class="product-detail">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -212,7 +221,8 @@
             </div>
             <div class="product-item">
                 <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1599139894727-62676829679b?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="https://images.unsplash.com/photo-1599139894727-62676829679b?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
                 </div>
                 <div class="product-detail">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
